--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='bakedsdf_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="images/bakedsdf_after.mp4" type="video/mp4">
+              <img src='images/cloth_grasping.gif' width="160">
             Your browser does not support the video tag.
             </video></div>
-            <img src='images/bakedsdf_before.jpg' width="160">
+            <img src='images/cloth_grasping.jpg' width="160">
           </div>
           <script type="text/javascript">
             function bakedsdf_start() {
@@ -73,30 +73,25 @@
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://bakedsdf.github.io/">
-            <span class="papertitle">BakedSDF: Meshing Neural SDFs for Real-Time View Synthesis</span>
+          <a href="https://arxiv.org/abs/2008.05626">
+            <span class="papertitle">Cloth Region Segmentation for Robust Grasp Selection</span>
           </a>
           <br>
-          <a href="https://lioryariv.github.io/">Lior Yariv*</a>,
-          <a href="https://phogzone.com/">Peter Hedman*</a>,
-          <a href="https://creiser.github.io/">Christian Reiser</a>,
-          <a href="https://dorverbin.github.io/">Dor Verbin</a>,  <br>
-          <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-          <a href="https://szeliski.org/RichardSzeliski.htm">Richard Szeliski</a>,
-          <strong>Jonathan T. Barron</strong>,
-          <a href="https://bmild.github.io/">Ben Mildenhall</a>
+          <strong>Jianing Qian*</strong>,
+          <a href="https://thomasweng.com">Thomas Weng*</a>,
+          Luxin Zhang,
+          <a href="https://brianokorn.com">Brian Okorn</a>,  <br>
+          <a href="https://davheld.github.io">David Held </a>,
+          
           <br>
-          <em>SIGGRAPH</em>, 2023
+          <em>International Conference on Intelligent Robots and Systems (IROS)</em>, 2020
           <br>
-          <a href="https://bakedsdf.github.io/">project page</a>
+          <a href="https://sites.google.com/view/cloth-segmentation">project page</a>
           /
-          <a href="https://www.youtube.com/watch?v=fThKXZ6uDTk">video</a>
+          <a href="https://github.com/thomasweng15/cloth-segmentation">code</a>
           /
-          <a href="https://arxiv.org/abs/2302.14859">arXiv</a>
+          <a href="https://arxiv.org/pdf/2008.05626.pdf">arXiv</a>
           <p></p>
-          <p>
-          We use SDFs to bake a NeRF-like model into a high quality mesh and do real-time view synthesis.
-          </p>
         </td>
       </tr>
             
