--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
 
 
       <tr onmouseout="bakedsdf_stop()" onmouseover="bakedsdf_start()">
-        <td style="padding:20px;width:25%;vertical-align:middle">
+        <td style="padding:10px;width:5%;vertical-align:middle">
           <div class="one">
             <div class="two" id='bakedsdf_image'><video  width=100% height=100% muted autoplay loop>
               <img src='images/cloth_grasping.gif' width="160">
-            Your browser does not support the video tag.
-            </video></div>
+            </div>
             <img src='images/cloth_grasping.jpg' width="160">
           </div>
           <script type="text/javascript">
