--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
 
       <tr onmouseout="bakedsdf_stop()" onmouseover="bakedsdf_start()">
-        <td style="padding:10px;width:5%;vertical-align:middle">
+        <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
           <div class="one">
             <div class="two" id='bakedsdf_image'><video  width=100% height=100% muted autoplay loop>
-              <img src='images/cloth_grasping.gif' width="160">
+              <img src='images/cloth_grasping.gif' style="width:auto; height:auto; max-width:100%;">
             </div>
-            <img src='images/cloth_grasping.jpg' width="160">
+            <img src='images/cloth_grasping.jpg' style="width:auto; height:auto; max-width:100%;">
           </div>
           <script type="text/javascript">
             function bakedsdf_start() {
@@ -71,7 +71,7 @@
             bakedsdf_stop()
           </script>
         </td>
-        <td style="padding:20px;width:75%;vertical-align:middle">
+        <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
           <a href="https://arxiv.org/abs/2008.05626">
             <span class="papertitle">Cloth Region Segmentation for Robust Grasp Selection</span>
           </a>
