--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             bakedsdf_stop()
           </script>
         </td>
-        <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+        <td style="padding:2.5%;width:75%;vertical-align:middle">
           <a href="https://arxiv.org/abs/2008.05626">
             <span class="papertitle">Cloth Region Segmentation for Robust Grasp Selection</span>
           </a>
