--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="two" id='bakedsdf_image'><video  width=100% height=100% muted autoplay loop>
               <img src='images/cloth_grasping.gif' style="width:auto; height:auto; max-width:100%;">
             </div>
-            <img src='images/cloth_grasping.jpg' style="width:auto; height:auto; max-width:100%;">
+            <img src='images/cloth_grasping.gif' style="width:auto; height:auto; max-width:100%;">
           </div>
           <script type="text/javascript">
             function bakedsdf_start() {
