--- a/index.html
+++ b/index.html
@@ -52,24 +52,9 @@
 
 
 
-      <tr onmouseout="bakedsdf_stop()" onmouseover="bakedsdf_start()">
+      <tr>
         <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-          <div class="one">
-            <div class="two" id='bakedsdf_image'><video  width=100% height=100% muted autoplay loop>
-              <img src='images/cloth_grasping.gif' style="width:auto; height:auto; max-width:100%;">
-            </div>
-            <img src='images/cloth_grasping.gif' style="width:auto; height:auto; max-width:100%;">
-          </div>
-          <script type="text/javascript">
-            function bakedsdf_start() {
-              document.getElementById('bakedsdf_image').style.opacity = "1";
-            }
-
-            function bakedsdf_stop() {
-              document.getElementById('bakedsdf_image').style.opacity = "0";
-            }
-            bakedsdf_stop()
-          </script>
+          <img src="/images/cloth_grasping.gif" alt="project image" style="width:auto; height:auto; max-width:100%;" />
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:middle">
           <a href="https://arxiv.org/abs/2008.05626">
