--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <tr>
         <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-          <img src="/images/cloth_grasping.gif" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+          <img src="images/cloth_grasping.gif" alt="project image" style="width:auto; height:auto; max-width:100%;" />
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:middle">
           <a href="https://arxiv.org/abs/2008.05626">
