--- a/index.html
+++ b/index.html
@@ -66,13 +66,34 @@
           <a href="https://yang-gao.weebly.com">Yang Gao</a>,
           
           <br>
-          <em>International Conference on Machine Learning (ICML)</em>, 2021
+          <em>International Conference on Machine Learning (ICML)</em>, 2022
           <br>
           <a href="https://sites.google.com/view/icml22-fighting-fire-with-fire/">project page</a>
           /
           <a href="https://github.com/AlvinWen428/fighting-fire-with-firefire-con">code</a>
           /
           <a href="https://arxiv.org/pdf/2206.10816.pdf">arXiv</a>
+          <p></p>
+        </td>
+      </tr>
+
+      <tr>
+        <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+          <img src="images/flood-network.png" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+        </td>
+        <td style="padding:2.5%;width:75%;vertical-align:middle">
+          <a href="https://www.seas.upenn.edu/~dineshj/publication/qian-2021-flood/qian-2021-flood.pdf">
+            <span class="papertitle">Object Representations Guided By Optical Flow</span>
+          </a>
+          <br>
+          <strong>Jianing Qian</strong>,
+          <a href="https://www.seas.upenn.edu/~dineshj/">Dinesh Jayaraman </a>,
+          
+          <br>
+          <em>NeurIPS Robot Learning Workshop</em>, 2021
+          <br>
+          <a href="https://www.seas.upenn.edu/~dineshj/publication/qian-2021-flood/qian-2021-flood.pdf">pdf</a>
+          <a href="https://slideslive.com/38970798/object-representations-guided-by-optical-flow?locale=cs">slides</a>
           <p></p>
         </td>
       </tr>
